<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp">

        <android.widget.LinearLayout
            android:id="@+id/topic_android_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <RadioGroup
                android:id="@+id/radio_group_gravity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_btn_left"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/gravity_left" />

                <RadioButton
                    android:id="@+id/radio_btn_center"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/gravity_center" />

                <RadioButton
                    android:id="@+id/radio_btn_right"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/gravity_right" />
            </RadioGroup>

            <TextView
                android:id="@+id/label_active_gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gravity_label" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/atak_logo"
                android:src="@drawable/pic_atak_icon" />

            <android.widget.LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/atak_notification_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0"
                    android:background="@drawable/btn_gray"
                    android:backgroundTint="#808080"
                    android:paddingLeft="4dp"
                    android:paddingTop="8dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:text="@string/notify_via_atak"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/android_notification_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0"
                    android:background="@drawable/btn_gray"
                    android:backgroundTint="#808080"
                    android:paddingLeft="4dp"
                    android:paddingTop="8dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:text="@string/notify_via_android"
                    android:textColor="#000000" />
            </android.widget.LinearLayout>

            <TextView
                android:id="@+id/service_uptime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                tools:text="Service Uptime: 5 sec" />

            <Button
                android:id="@+id/start_service"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0"
                android:background="@drawable/btn_gray"
                android:backgroundTint="#808080"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp"
                android:text="@string/start_service"
                android:textColor="#000000" />

        </android.widget.LinearLayout>

    </android.widget.ScrollView>

</android.widget.LinearLayout>